# epr-simulator

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
apps/emis/: pyproject.toml  requirements.txt
apps/emis/src/emis/: main.py
apps/systemone/: pyproject.toml
apps/systemone/src/systemone/: main.py  systemone.py
docs/: EMIS.md  SystemOne.md
