[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emis"
version = "0.1.0"
description = "E.M.I.S"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[project.scripts]
emis = "emis.main:app"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["emis"]
